<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/editTextRePassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/ConfirmPassword"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:hint="@string/Email"/>

    <Button
        android:id="@+id/editRegister"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/Register"/>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/Already_Registered"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="100dp"/>

        <TextView
            android:id="@+id/back2login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/LOGIN"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:paddingStart="10dp"
            android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>